# bttr_dispatchers

./: Makefile  README.md  hyprpm.toml  meson.build
include/: globals.hpp
src/: main.cpp
